# recipes_exercise

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9ffbf4784312_.py
app/: config.py  database.py  main.py
app/models/: recipe.py  user.py
app/routers/: auth.py  recipes.py
app/schemas/: auth.py  recipe.py
app/services/: auth.py  recipe.py
tests/: conftest.py
tests/integration/: test_recipe_integration.py
tests/unit/: test_auth_routes.py  test_auth_service.py  test_recipe.py  test_recipe_routes.py  test_recipe_service.py
